erDiagram

WAREHOUSE {
  int warehouse_id PK
  int location_id FK
  string name
  string description
}

ZONE {
  int zone_id PK
  int warehouse_id FK
  string name
  string description
}

AISLE {
  int aisle_id PK
  int zone_id FK
  string label
  int width
  string width_unit
}

RACK {
  int rack_id PK
  int aisle_id FK
  string label
  int max_height
  string height_unit
}

SHELF {
  int shelf_id PK
  int rack_id FK
  string level
  decimal max_weight
  decimal max_volume
}

CAPACITY {
  int capacity_id PK
  string entity_type "WAREHOUSE|ZONE|RACK|SHELF"
  int entity_id
  decimal value
  string unit
  string description
}

LOCATION {
  int location_id PK
  string address
  string city
  string postal_code
  string country
}

STORAGE_REQUEST {
  int request_id PK
  int party_id FK
  int warehouse_id FK
  datetime requested_entry_date
  datetime requested_exit_date
  string status "pending|accepted|rejected"
  int decision_employee_id FK
  datetime decision_date
}

STORAGE_RESERVATION {
  int reservation_id PK
  int request_id FK
  int party_id FK
  int shelf_id FK
  decimal reserved_weight
  decimal reserved_volume
  datetime reserved_from
  datetime reserved_until
  string status "pending|active|expired|cancelled"
}

STORAGE_RECORD {
  int storage_record_id PK
  int request_id FK
  int party_id FK
  int shelf_id FK
  datetime actual_entry_date
  datetime actual_exit_date
  string cargo_description
  decimal cargo_weight
  decimal cargo_volume
}

PAYMENT {
  int payment_id PK
  int storage_record_id FK
  int party_id FK
  decimal amount
  string currency
  string status "pending|paid|failed|cancelled"
  datetime payment_date
  string external_reference
}

CARGO_EVENT_TYPE {
  int event_type_id PK
  string name
  string description
}

CARGO_EVENT_HISTORY {
  int event_id PK
  int storage_record_id FK
  int event_type_id FK
  datetime event_time
  int employee_id FK
  jsonb details
}

EMPLOYEE {
  int employee_id PK
  string name
  string email
  string phone
  datetime hire_date
  boolean is_deleted "default: false, INDEXED, soft delete"
}

ROLE {
  int role_id PK
  string name "warehouse_manager|logistics_coordinator|storage_approver"
  string description
}

EMPLOYEE_ROLE {
  int employee_id FK
  int role_id FK
  datetime assigned_date
}

EMPLOYEE_WAREHOUSE {
  int employee_id FK
  int warehouse_id FK
  datetime assigned_from
  datetime assigned_until
}

CUSTOMER {
  int customer_id PK
  string name
  string email
  string phone
  boolean is_deleted "default: false, INDEXED, soft delete"
}

WAREHOUSE ||--o{ ZONE : "contains"
ZONE ||--o{ AISLE : "has"
AISLE ||--o{ RACK : "contains"
RACK ||--o{ SHELF : "has"
WAREHOUSE ||--|| LOCATION : "located at"
WAREHOUSE ||--o{ STORAGE_REQUEST : "receives"
WAREHOUSE ||--o{ EMPLOYEE_WAREHOUSE : "staffed_by"
EMPLOYEE ||--o{ EMPLOYEE_WAREHOUSE : "assigned_to"
STORAGE_RECORD }o--|| SHELF : "occupies"
STORAGE_RECORD }o--|| CUSTOMER : "for"
STORAGE_REQUEST }o--|| CUSTOMER : "requested_by"
STORAGE_REQUEST }o--|| EMPLOYEE : "decided_by"
STORAGE_REQUEST ||--o{ STORAGE_RECORD : "results_in"
STORAGE_REQUEST ||--o{ STORAGE_RESERVATION : "reserves"
STORAGE_RESERVATION }o--|| SHELF : "on"
STORAGE_RESERVATION }o--|| CUSTOMER : "for"
EMPLOYEE ||--o{ EMPLOYEE_ROLE : "has"
ROLE ||--o{ EMPLOYEE_ROLE : "assigned"
STORAGE_RECORD ||--o{ CARGO_EVENT_HISTORY : "has_event"
CARGO_EVENT_TYPE ||--o{ CARGO_EVENT_HISTORY : "categorizes"
EMPLOYEE ||--o{ CARGO_EVENT_HISTORY : "performed"
STORAGE_RECORD ||--o{ PAYMENT : "billed"
PAYMENT }o--|| CUSTOMER : "for"

%% NOTE: When querying EMPLOYEE, always filter with is_deleted = false (soft delete)
%% NOTE: When querying CUSTOMER, always filter with is_deleted = false (soft delete)
